💄 Fix spacing også på gamle skjermer (browserstack)

--- a/tavla/app/globals.css
+++ b/tavla/app/globals.css
@@ -331,12 +331,6 @@
         padding: 1em;
     }
 
-    @supports not (gap: 0.75em) {
-        .rootContainer > * {
-            margin: 0.5em;
-        }
-    }
-
     .lineThrough {
         text-decoration: line-through;
     }
